--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pibang-backgrounds (0.1.1) unstable; urgency=low
+
+  * gzipped
+
+ -- "Super" Nathan Weber <supernathansunshine@gmail.com>  Fri, 26 Jul 2013 15:17:17 +0900
+
 pibang-backgrounds (0.0.8) unstable; urgency=low
 
   * Created seperate contrib package
